@startuml

Title じみったー（仮）Ver5.0.0（仮）クラス図

package zimitta{
    package Activity{
        class MainActivity{

        }
    }

    package ClickListener{
        Android.ClickableSpan <|-- ScreenNameClickListener
        Android.ClickableSpan <|-- HashTagClickListener
        Android.LinkMovementMethod <|-- MutableLinkMovementMethod

        class ScreenNameClickListener{
            -String screenName
            +ScreenNameClickable(String screenName)
            +void onClick(View widget)
        }
        class HashTagClickListener{
            +void onClick(View widget)
        }

        interface UrlClickListener{
            +{abstract} void onUrlClick(TextView widget, Uri uri)
        }

        class MutableLinkMovementMethod{
            -UrlClickListener listener
            +void setOnUrlClickListener(UrlClickListener listener)
            +boolean onTouchEvent(TextView widget, Spannable buffer, MotionEvent event)
        }
    }

    package Core{
        ActivityCore <|-- MainActivity

        class ActivityCore{
            #ViewHolder viewHolder
            #TwitterAction TwitterAction
            #void showToast(String text)
            #void setItemView(Status status)
        }
        class ViewHolder{
            -Context context
            -final Pattern ID_MATCH_PATTERN
            -final Pattern HASH_TAG_MATCH_PATTERN
            'レイアウト
            +TextView Name
            +ImageView UserIcon
            +ImageView RTUserIcon
            +ImageView RTIcon
            +TextView ScreenName
            +TextView TweetText
            +TextView Time
            +TextView Via
            +TextView RTCount
            +TextView FavCount
            +TextView RTUserName
            +ImageView TweetDeletedStatus
            +ImageView LockedStatus
            +View TweetStatus
            +LinearLayout PreviewImage
            +ImageView[] ImagePreviewViews
            +ImageView PreviewVideoView
            '引用ツイート関連
            +LinearLayout QuoteTweetView
            +TextView QuoteName
            +TextView QuoteScreenName
            +TextView QuoteText
            +TextView QuoteAtTime
            +LinearLayout QuotePreviewImage
            +ImageView[] ImageQuotePreviewViews
            +ImageView QuotePreviewVideoView

            +ViewHolder(Context context)
            +ViewHolder initialize(View view)
            +void setStatusItemView(Status item)
            '引用ツイートの処理
            -void setQuoteTweetView(Status item)
            'TextViewのリンク以外のクリックイベントを更に下のViewへ渡す
            -void mutableLinkMovement(TextView TweetText)
            'メディアのプレビュー表示
            -void setPreviewMedia(MediaEntity[] mediaEntity, ImageView[] imageViews, ImageView videoPlayView)
            '時間を変換するやつ
            -void replacrTimeAt(Date TimeStatusNow, Date CreatedAt, TextView timeView)
            'ループしてるテキストの置き換えメソッド
            -String replaceLoopText(String tweetText, Context context)
            'メディアURLを消す
            -String deleteMediaURL(String tweet, MediaEntity[] mediaEntities)
            '短縮URLを展開する
            -String expansionURL(String tweet, URLEntity[] urlEntities)
            'テキストからIDとハッシュタグを抽出してクリック可能に
            -SpannableString mutableIDandHashTagMobement(String string)
        }
    }

    package Datas{

        Android.Parcelable <|-- ParcelStatus

        enum MenuTags{
            Detail
            Replay
            RT
            Fav
            RTandFav
            User
            HashTag
            Delete
            Share
            Plugin
        }

        class MenuItems{
            +String name
            +Tags Tags
            +MenuItems getInstans(String name, Tags tags)
        }

        'クラスごとIntentで投げつける時に使う
        class ParcelStatus{
            +Status status
            +ParcelStatus()
            #ParcelStatus(Parcel in)
            +int describeContents()
            +void writeToParcel(Parcel dest, int flags)
            +static final Parcelable.Creator<ParcelStatus> CREATOR
        }

        note "どこまでのデータを静的に保持させるべきなのか検討する" as SVNT
        StaticVariable . SVNT
        class StaticVariable{
            +{static} boolean initialize(Context context)
            +{static} void Destroy()
        }
    }

    package TwitterUtl{

        Android.BroadcastReceiver <|-- StreamReceiver
        twitter4j.UserStreamAdapter <|-- StreamAdapter

        class TwitterAction{
            -AsyncTwitter asyncTwitter
            -Twitter twitter
            -ConfigurationBuilder builder
            +TwitterAction(Context context, TwitterListener twitterListener)
            -void makeConfigurationBuilder(Context context)
            +void statusUpdate(StatusUpdate statusUpdate)
            +void getHomeTimeline(Paging p)
            +void getMentions(Paging p)
            +void getVerifyCredentials()
            +void getMutesIDs()
            +void retweetStatus(long ID)
            +void createFavorite(long ID)
            +void destroyFavorite(long ID)
            +void destroyStatus(long ID)
            +void getUserLists(long userID)
            +void getUserListStatuses(long listID, Paging paging)
            +void getUserListMembers(long listID, long cursor)
            +UploadedMedia uploadMedia(File file) throws TwitterException
            +void showUser(String screenName)
            +void showUser(long ID)
        }

        class StreamAdapter{
            -Context context
            +StreamAdapter(Context context)
            +void onStatus(Status status)
            +void onException(Exception e)
        }

        class StreamReceiver{
            -Callback callback
            -LocalBroadcastManager manager
        }

        interface Callback{
            void onEventInvoked(Status status)
        }
    }
}
@enduml
